# RtSHackathon

./: .gitignore  AVATAR_ASPECT_RATIO_FIX.md  AVATAR_BADGE_FIX.md  AVATAR_STORAGE_FIX.md  CHAPTER_THUMBNAILS_IMPLEMENTATION.md  CLASSROOM_JOIN_FLOW_COMPLETE.md  CORRECT_RAILWAY_URL.md  DEBUG_CLASSROOM_JOIN.md  DEBUG_CONNECTION.md  DEBUG_DATABASE_CONNECTION.md  DELETE_CHAPTER_FEATURE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIX_502_ERROR.md  FIX_MATERIALS_PERMISSIONS.sql  FIX_MATERIALS_UPLOAD_ERROR.md  FIX_PORT_ERROR.md  FIX_STORAGE_PERMISSIONS.md  FIX_SUPABASE_CRASH.md  FLUX_MODEL_UPDATE.md  FRONTEND_BACKEND_INTEGRATION.md  GITHUB_ACTIONS_SETUP.md  JOIN_CLASSROOM_BACK_BUTTON_FIX.md  JOIN_CLASSROOM_URL_SUPPORT.md  MANY_TO_MANY_CLASSROOMS.md  MANY_TO_MANY_MIGRATION_COMPLETE.md  MATERIALS_BUCKET_TROUBLESHOOTING.md  MATERIALS_UPLOAD_AND_DISPLAY.md  PDF_EXPORT_ASPECT_RATIO_SPEC.md  PDF_EXPORT_COMPLETE_FIX.md  PDF_EXPORT_FIX_APPLIED.md  PHOTO_FIRST_AVATAR_GENERATION.md  PRODUCTION_SECURITY.md  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_DOCKER_FIX.md  RAILWAY_FIX.md  README.md  README_DEVELOPMENT.md  (+42 more)
.claude/: claude.md  (+1 more)
backend/: .env.example  README.md  application.py  database.py  database.sql  environment.yml  main.py  pyproject.toml  requirements.txt  test_connection.py
backend/database/: database.py  test_connection.py
backend/services/: avatar.py
backend/src/: main.py  panel_review.py
backend/src/database/: MATERIALS_SETUP.md  add_materials_table.sql  database.py  database.sql  migration_many_to_many_classrooms.sql  migration_nullable_classroom.sql  (+1 more)
(+68 files in other folders)
